feat: Update CTA section with new introductory text, revised credit message styling, and 'Без VPN' benefit.

--- a/index.html
+++ b/index.html
@@ -1769,10 +1769,13 @@
     <!-- CTA SECTION -->
     <section class="cta-section">
         <div class="container">
+            <h2 style="font-size: clamp(1.5rem, 4vw, 2.2rem); font-weight: 700; margin-bottom: 12px;">Хочешь сэкономить время и деньги?</h2>
+            <p style="color: var(--gray); font-size: 18px; margin-bottom: 8px;">Будь в тренде вместе с нами и переходи в бота</p>
+            <p style="color: var(--yellow); font-size: 16px; margin-bottom: 40px;">Попробуй, всего от 399₽</p>
+
             <div class="cta-box">
                 <div class="cta-emoji">🍌</div>
-                <h2>Готов попробовать?</h2>
-                <p style="color: var(--gray); font-size: 18px; margin-bottom: 0;">10 бесплатных кредитов ждут тебя</p>
+                <p style="color: var(--white); font-size: 20px; font-weight: 600; margin-bottom: 24px;">10 бесплатных кредитов ждут тебя</p>
 
                 <div class="cta-benefits">
                     <div class="cta-benefit">
@@ -1785,7 +1788,7 @@
                         <svg viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
                         </svg>
-                        Автовозврат при ошибках
+                        Без VPN
                     </div>
                     <div class="cta-benefit">
                         <svg viewBox="0 0 24 24" fill="currentColor">
