feat: Update CTA note from 10 credits to 2 instant generations.

--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,7 @@
                     Открыть NanoBanana Bot
                 </a>
 
-                <p class="cta-note">Нажми Start и получи 10 кредитов мгновенно</p>
+                <p class="cta-note">Нажми Start и получи 2 генерации мгновенно</p>
             </div>
         </div>
     </section>
